# LLM-Powered-Retrieval-System

./: .env.example  .gitignore  CLEANUP_REPORT.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  LICENSE  README.md  STREAMLIT_UI_README.md  api.md  app.py  bottlenecks.md  check-system.sh  clear_documents.py  custom_response_processor.py  custome_vector_store.py  deploy_and_test.py  evaluate_rag_system.py  frontend.py  initialize_vector_db.py  load_sample_documents.py  logs.md  models.py  quick-start.sh  rag_system_improvement_plan.md  rag_system_requirements.md  requirements.md  requirements.txt  run_streamlit.py  setup-system.sh  streamlit_app.py  streamlit_requirements.txt  streamlit_ui.py  test-system.sh  test_gemini_api.py  test_improvements.py  test_llm_fallback.py  test_phase3_system_integration.py  test_streamlit_ui.py  upload_archive_documents.py  validate_llm_config.py
archive/sample_data/: create_sample_docs.py  sample_documents.json  sample_support_documents.json
archive/sample_data/sample_support_documents/billing/: payment_processing.txt
archive/sample_data/sample_support_documents/faqs/: billing_faq.md  general_faq.md
archive/sample_data/sample_support_documents/policies/: privacy_policy.md  return_policy.md  warranty_policy.txt
archive/sample_data/sample_support_documents/procedures/: order_management.txt
archive/sample_data/sample_support_documents/product_info/: accessories_catalog.txt  laptop_models.md  product_catalog.md  specifications.txt
chroma_storage/: chroma.sqlite3
customer-support-platform/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.py  run_simple.py  run_streamlit.py  streamlit_ui.py
customer-support-platform/.github/workflows/: ci-cd.yml
customer-support-platform/infrastructure/kubernetes/: api-gateway-deployment.yaml  ingress.yaml
customer-support-platform/infrastructure/monitoring/: prometheus.yml
customer-support-platform/services/api-gateway/: Dockerfile  main.py
customer-support-platform/services/conversation-service/: Dockerfile  main.py
customer-support-platform/services/knowledge-base-service/: Dockerfile  main.py
customer-support-platform/shared/: __init__.py
customer-support-platform/shared/auth/: jwt_handler.py
customer-support-platform/shared/config/: settings.py
customer-support-platform/shared/database/: connection.py  models.py
customer-support-platform/shared/monitoring/: metrics.py
customer-support-platform/tests/: conftest.py
customer-support-platform/tests/integration/: test_full_workflow.py
customer-support-platform/tests/unit/: test_conversation_service.py
docs/: 01-architecture-overview.md  02-database-schemas.md  03-services-documentation.md  04-document-ingestion.md  05-rag-implementation.md  06-query-processing.md  07-response-generation.md  08-features-capabilities.md  09-service-communication.md  README.md
infrastructure/kubernetes/: analytics-deployment.yaml  api-gateway-deployment.yaml  conversation-deployment.yaml  knowledge-base-deployment.yaml  namespace.yaml  secrets.yaml
infrastructure/monitoring/: prometheus.yml
services/analytics-service/: Dockerfile  requirements.txt
services/analytics-service/src/: main.py
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/src/: main.py
services/conversation-service/: Dockerfile  requirements.txt
services/conversation-service/src/: main.py
services/knowledge-base-service/: Dockerfile  README.md  requirements.txt
services/knowledge-base-service/src/: config.py  main.py
services/shared/: __init__.py  config.py  config_manager.py  middleware.py
setup/: .env.example  .env.improved  docker-compose.yml  quick-start.sh  setup.sh  system-requirements.md
testing/: Dockerfile.test  TESTING_GUIDE.md  docker-compose.test.yml  postman_collection.json  test_complete_workflow.sh  test_customer_context.py  test_enhanced_integration.py  test_multi_hop.py  test_reranking.py
testing/load_tests/: run_load_tests.sh
vector_database/chroma/: chroma.sqlite3
(+46 files in other folders)
